VP-007-A basic UI, creating string for both languages [GN, ZMartin]

--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VaccinationPassport">
+        <activity android:name=".DocAddActivity"></activity>
         <activity android:name=".VaccineListActivity"></activity>
         <activity android:name=".UserProfileActivity"></activity>
         <activity android:name=".MainActivity">
