--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
+    implementation 'it.xabaras.android.espresso:recyclerview-child-actions:1.0'
 
     testImplementation 'junit:junit:4.+'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0-RC'
